implementado o botao de logout

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,9 @@ code {
 .text-white{
   color: white;
 }
+a{
+  cursor: pointer;
+}
 .flex-center-center{
   display: flex;
   justify-content: center;
